--- a/monstyle.css
+++ b/monstyle.css
@@ -31,3 +31,10 @@ body{
 	padding-top: 20px;
 	padding-left: 20px;
 }
+#pied{
+	font-size: 12px;
+	text-align: left;
+	background: #FF3300;
+	height: 15px;
+	color:white;
+}
